force-app/main/default/objects/Additional_Account_User__c/Additional_Account_User__c.object-meta.xml
<CustomObject>
    <label>Additional Account User</label>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>Additional Account User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Account Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>